# allie

./: .gitignore  .landmark.yml  AGENTS.md  Cargo.toml  DESIGN.md  README.md  SPEC.md  VISION.md  package-lock.json  package.json
.cargo/: audit-waivers.toml  audit.toml
backlog.d/: 001-freeze-v0-deterministic-local-evidence-loop.md  002-enforce-v0-trust-boundaries-fail-closed.md  003-map-standards-obligations-without-legal-claims.md  004-make-agent-and-operator-verification-boring.md  005-promote-evidence-into-release-decisions-after-v0.md  011-replace-synchronous-agent-helper-with-durable-jobs.md  012-make-wcag-coverage-a-55-criterion-surface-matrix.md  014-package-host-agnostic-consumer-contract.md  015-prove-allie-on-real-authenticated-apps.md  016-deepen-audit-autonomy-depth.md  017-descope-remediation-audit-only.md  018-make-adoption-trivial.md  019-pay-down-core-architecture-debt.md  020-make-the-invariants-true-and-enforced.md  021-harden-repo-gates.md  022-sharpen-positioning-around-the-moat.md  023-authenticated-audit-on-real-apps-slice-1.md  024-adopt-misty-step-comic-ops-aesthetic.md  025-prove-allie-across-real-app-dogfood-ladder.md  026-build-autonomous-mapping-and-test-generation-eval-lab.md  027-raise-wcag-report-efficacy-and-quality.md  028-ratchet-quality-gates-and-performance-proof.md  029-finish-core-architecture-seams.md  030-make-allie-agent-ready-for-qa-and-dogfood.md  031-make-adoption-docs-and-release-bundles-boring.md
docs/: architecture.md  competitive-landscape.md  criteria-assessability-research.md  design-contract.md  evidence-contract.md  (+5 more)
(+167 files in other folders)
