[package]
name = "allie"
version = "0.1.0"
edition = "2024"
description = "Accessibility evidence harness and release intelligence CLI"
publish = false
license = "UNLICENSED"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
wait-timeout = "0.2.1"

[dev-dependencies]
tempfile = "3.23.0"
